Add and fix func
