# cmd/storage/internal/extapi/api.go
@@ -155,6 +155,10 @@ func NewServer(appl app.App, cfg Config, repo repo, authAccess auth.Check) (*res
 	api.GetStationConfigVarStringHandler = op.GetStationConfigVarStringHandlerFunc(svc.getStationConfigVarString)
 	api.GetStationConfigVarIntHandler = op.GetStationConfigVarIntHandlerFunc(svc.getStationConfigVarInt)
 
+	api.GetStationWashConfigVarIntHandler = op.GetStationWashConfigVarIntHandlerFunc(svc.getStationWashConfigVarInt)
+	api.GetStationWashConfigVarBoolHandler = op.GetStationWashConfigVarBoolHandlerFunc(svc.getStationWashConfigVarBool)
+	api.GetStationWashConfigVarStringHandler = op.GetStationWashConfigVarStringHandlerFunc(svc.getStationWashConfigVarString)
+
 	server := restapi.NewServer(api)
 	server.Host = cfg.Host
 	server.Port = cfg.Port
